added jumbotron tag and adjusted font stylings

--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -3,20 +3,22 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 <div class="container contact" ng-controller='ContactController'>
-  <div class="content">
     <br>
     <br>
     <br>
-    <div class="row featurette">
-      <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="../../images/teamwhole.jpg" alt="Team image">
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-md-4">
+        <h2 class="heading pull-left">Hack Reactor Machine Learning Team</h2>
+        <h4 class="lead pull-left">January 2014 Cohort</h4>
       </div>
-      <div class="col-md-7">
-        <h2 class="featurette-heading text-center">The Team</h2>
-        <p class="lead"> Students of Hack Reactor Class of January 2014 </p>
+      <div class="col-md-8">
+        <img class="featurette-image img-responsive img-rounded" src="../../images/teamwhole.jpg" alt="Team image">
       </div>
     </div>
+  </div>
 
+  <div class="content">
   <div class="media">
     <div class="row">
       <div class="col-md-3">
@@ -36,23 +38,22 @@
       </div>
     </div>
   </div>
-  <div class="container">
     <div class="media">
       <div class="row">
         <div class="col-md-3">
           <img class="img-circle " alt="250x250" src="../../images/team2.jpg" style="width: 250px; height: 250px;">
         <br>
         <ul class="list-inline text-center">
-          <li><a href="https://github.com/HarleyKwyn"><i class="fa fa-github fa-3x"></i></a></li>
+          <li><a href="https://github.com/vingiarrusso"><i class="fa fa-github fa-3x"></i></a></li>
           <li></li>
-          <li><a href="https://www.linkedin.com/pub/kwyn-meagher/1a/a70/46b/"><i class="fa fa-linkedin fa-3x"></i></a></li>
+          <li><a href="https://www.linkedin.com/pub/vincent-giarrusso/24/b88/328/"><i class="fa fa-linkedin fa-3x"></i></a></li>
           <li></li>
-          <li><a href="https://twitter.com/harleykwyn"><i class="fa fa-twitter fa-3x"></i></a></li>
+          <li><a href="https://twitter.com/VinnieGiarrusso"><i class="fa fa-twitter fa-3x"></i></a></li>
         </ul>
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Vinnie Giarrusso</h3>
-          <h4 class="text-muted"> Bio-text </h4>
+          <h4 class="text-muted"> Musician and teacher in his life before code.  When not spending his spare time hacking with three.js, you can find him out hiking and exploring.</h4>
         </div>
       </div>
     </div>
@@ -127,11 +128,10 @@
         </div>
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <h3 class="text-info">Sonali Dayal</h3>
-          <h4 class="text-muted"> Biochemist now hacker. Professional feature extractor for machine learning.</h4>
+          <h4 class="text-muted"> Biochemist now hacker. Expert feature extractor for machine learning.</h4>
         </div>
       </div>
     </div>
-  </div>
   </div>
 </div>
 
