--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -34,7 +34,7 @@
       </div>
       <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
         <h3 class="text-info">Jeanette Pettibone</h3>
-        <h4 class="text-muted"> Bio text </h4>
+        <h4 class="text-muted"> Linguist with experience in Natural Language Processing. Expert in rapid prototyping of machine learning algorithms</h4>
       </div>
     </div>
   </div>
