changed home image and adding to improvingalgopage

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -80,6 +80,12 @@ path.link {
   text-align: center;
 }
 
+.carousel-caption {
+  text-shadow: 3px 3px 3px black;
+}
+.carousel-inner {
+  border-radius: 10px;
+}
 
 
 
