fixes merge problems

--- a/public/views/partials/improvingYourAlgorithm.html
+++ b/public/views/partials/improvingYourAlgorithm.html
@@ -13,3 +13,25 @@
     Scribe our learnings here, as we document for future space cadets
   </div>
 </div>
+<div class="row featurette">
+  <div class="col-md-5">
+      <div class="errorChart"></div>
+  </div>
+  <div class="col-md-7">
+      <h2 class="featurette-heading">Knowing Your Error</h2>
+  </div>
+  <p class="lead">Once you have your first result under your belt, now comes the task of improving the margin of error.</p>
+</div>
+<hr class="featurette-divider">
+<div class="row">
+  <h1>Here are some ways you can improve on your algorithm:</h1><br>
+    <p class="lead">
+      <h4>Play with the input parameters</h4>
+      <li>By changing the various parameters for your algorithm, you can come up with a baseline error to begin working with.  These will be specific to your type of algorithm.  In our case, we were able to change the max-depth of our trees, the number of trees we used, amount of features to use and the size of the subset of features each tree can choose from.</li>
+      <h4>Test Driven Error Development</h4>
+      <li>Create or use a method to test where your algorithm is performing weakly.  By knowing where your error margins are greatest, you can develop new features to improve performance in these weak areas.</li>
+      <h4>Avoid overfitting or underfitting</h4>
+      <h4>Consider looking into boosting.</h4>
+      <li>While we did not use this in our algorithm, research suggests that it  can help improve performance.</li>
+</div>
+<script src="../scripts/c3chart.js"></script>
