--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -4,8 +4,7 @@
       <!-- Indicators -->
       <div class="carousel-inner">
         <div class="item active">
-          <!-- <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="First slide"> -->
-          <img src="../images/machine-learning.jpg">
+          <img src="../images/bluegalaxy.jpg">
           <div class="container">
             <div class="carousel-caption">
               <h1>Hitchhikers Guide to Classifying Galaxies: Implementing your machine learning algorithm</h1>
