--- a/public/views/partials/improvingYourAlgorithm.html
+++ b/public/views/partials/improvingYourAlgorithm.html
@@ -15,7 +15,9 @@
 </div>
 <div class="row featurette">
   <div class="col-md-5">
+    <div class="chart">
       <div class="errorChart"></div>
+    </div>
   </div>
   <div class="col-md-7">
       <h2 class="featurette-heading">Knowing Your Error</h2>
