--- a/public/views/partials/theguide.html
+++ b/public/views/partials/theguide.html
@@ -1,12 +1,13 @@
 <div class="container contact">
   <br><br><br><br><br>
  <div class="row">
-  <a ng-click="subPage='../views/partials/mlintro.html'">The Blueprint</a> |
-  <a ng-click="subPage='../views/partials/dataExplaination.html'">Discovering our Data</a> |
-  <a ng-click="subPage='../views/partials/randomForests.html'">Researching Our Path</a> |
-  <a ng-click="subPage='../views/partials/iterationAndTesting.html'">Building our 1st Machine and Test Flight</a> |
-  <a ng-click="subPage='../views/partials/improvingYourAlgorithm.html'">Optimizing Our Machine and Travelling Into Space</a><br/>
-
+  <div class="subNav">
+    <a ng-click="subPage='../views/partials/mlintro.html'">The Blueprint</a> |
+    <a ng-click="subPage='../views/partials/dataExplaination.html'">Discovering our Data</a> |
+    <a ng-click="subPage='../views/partials/randomForests.html'">Researching Our Path</a> |
+    <a ng-click="subPage='../views/partials/iterationAndTesting.html'">Building our 1st Machine and Test Flight</a> |
+    <a ng-click="subPage='../views/partials/improvingYourAlgorithm.html'">Optimizing Our Machine and Travelling Into Space</a><br/>
+  </div>
   <div class = "feature">
     <div class="default">
       
