added background, changed svg colors to white

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -5,6 +5,7 @@
 body {
   padding-bottom: 40px;
   color: #5a5a5a;
+  background-color: #ccc;
 }
 
 .col-lg-4 {
@@ -46,7 +47,7 @@ body {
 
 path.link {
   fill: none;
-  stroke: #ccc;
+  stroke: #000;
   stroke-width: 1.5px;
 }
 .text {
@@ -66,6 +67,8 @@ path.link {
   height: 340px;
   border: 1px solid black;
   padding: 15px;
+  background-color: white;
+  border-radius: 15px;
 }
 
 .subNav {
@@ -85,8 +88,6 @@ path.link {
 .carousel-inner{
   border-radius: 5px;
 }
-
-
 
 
 /* CUSTOMIZE THE NAVBAR
