--- a/public/views/partials/mlintro.html
+++ b/public/views/partials/mlintro.html
@@ -1,6 +1,8 @@
 <style>
 svg {
-  border: 5px solid black;
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 10px;
 }
 </style>
 
