--- a/public/views/partials/dataExplaination.html
+++ b/public/views/partials/dataExplaination.html
@@ -5,31 +5,31 @@
   </div>
   <div class="chapter">
     As our hero's gathered, looking forward to their upcoming quest, they received a package from <a href="http://www.galaxyzoo.org/#/">Galaxy Zoo HQ</a>.
-    In preparation for our space voyage, we've received thousands of pictures our scientists have painstakingly classified during years of staring into a telescope. To begin training our ship we worked hard to understand the data we were working with.
-    These thousands of intergalactic photos were of lower quality than we would have liked, spanning 426x426 pixels each. They were in color, but the color was muted. Most importantly, we noticed the photos were consistently centered, allowing us to easily track where the galaxy would be during training.
-    <img src="../images/galaxySample.jpg">
-    Our classifications were at first puzzling. We quickly learned that our classifications were actually the responses of our citizens, helping us in our quest. Our scientists had polled hundreds of citizens, creating a distribution of probabilities which dictated the likelihood any galaxy was something special. Furthermore, each galaxy had many potential <a href="https://kaggle2.blob.core.windows.net/competitions/kaggle/3175/media/Screen%20Shot%202013-09-25%20at%2010.08.17.png">attributes</a>. This meant the best matches we had were this distributions, and in order to best accomplish our task, we would be trying to match our ship up to the smarts of our citizens.
-
-    Finally, in a conference with HQ, we concluded that they best method for our judgement would be a <a href="https://www.kaggle.com/wiki/RootMeanSquaredError">Root Mean Squared Error Test</a>
-
-    Understanding the different parts allowed for a targetting research for what we wanted to do next.
+    Our package included a set of <a href="https://en.wikipedia.org/wiki/Training_set">training data</a> and a set of <a href="https://en.wikipedia.org/wiki/Test_set">test data</a>.
+        <h4>Understanding your inputs</h4>
+    The training data we plan to train our ship's navagation system on included thousands of input vectors along with answer vectors to accompany them. 
+    Working to get a sense of these pictures, we examined their dimensions (424x424), noticed the galaxies were consistently centered, and saw that these pictures were in color
+        <img src="../images/galaxySample.jpg">
+        <h4>Understanding your answers</h4>
+    Our answer set was a determined through <a href="http://www.galaxyzoo.org/#/classify">crowd sourcing each galaxy's classification</a>. Since there were many people classifying each galaxy, our answer set was a distribution of probabilities associated with each galaxy. Furthermore, each galaxy had many potential <a href="https://kaggle2.blob.core.windows.net/competitions/kaggle/3175/media/Screen%20Shot%202013-09-25%20at%2010.08.17.png">attributes</a>. This meant the 'truth' that we were seeking was a the collective responses of our citizens.
+        <h4>Understanding your Measurement</h4>
+    Finally, Galaxy Zoo HQ, had mentioned that our ship's performance would be judged on the <a href="https://www.kaggle.com/wiki/RootMeanSquaredError">Root Mean Squared Error Testing</a>. Knowing that the performance would act as our only form of judgement meant that we would have greater leeway in performance time and the amount of memory we would be able to use.  
+  
   </div>
   <div class="chapterTitle">
     <h2>Our Learnings and Discovered Best Practices</h2>
   </div>
   <div class="chapter">
     Understanding inputs and outputs will vary depending on your question. 
-    <h4>Understanding your inputs</h4>
-    A strong understanding of inputs include understanding the data you're given as well as what can exist with your common inputs. 
-    Common input types include: a categoric input (eg. English word), an ordinal input (eg. age), and 2D arrays (eg. an image). <a href=" http://www.cs.cornell.edu/courses/cs578/2003fa/performance_measures.pdf">This site</a> contains several common data inputs from less to more complex.  
-    Expect a strong understanding of your input dataset to generate ideas on how you will generate metadata from what you're given. 
-    <h4>Understanding your outputs</h4>
-    Understanding your output is will depend on the question you're asked. Gathering an understanding of your ouput will allow you to assess what you consider to be a successful model. 
-    <h4>Understanding measurements</h4>
-    Understand how you want to measure your results: This will be your guideline for the coming future. Be sure the measurement you use is what you want to measure. Many machine learning algorithms have best practices associated with them. Many popular ones include : accuracy, etc
-    <a href=" http://www.cs.cornell.edu/courses/cs578/2003fa/performance_measures.pdf">Good place for accuracy tests</a>
-    <h4>Planning for your test data set</h4>
-    <h4>Great sites for sample data sets</h4> 
+        <h4>Understanding your inputs</h4>
+    Turning a sharp eye towards your input data (the test and training set) will be valuable in researching the best ways to approach your project. Expect a strong understanding of your input dataset to give you a few hypotheses on how to <a href=" https://en.wikipedia.org/wiki/Feature_extraction">feature extract</a> based on your specific input type. 
+    Common input types include: categoric inputs (eg. English word), ordinal inputs (eg. age), and 2D arrays (eg. an image). <a href=" http://www.cs.cornell.edu/courses/cs578/2003fa/performance_measures.pdf">This site</a> contains several common data inputs from less to more complex.  
+        <h4>Understanding your answers</h4>
+    Your output will be the foundation on which you build your machine. An understanding of your output will create relevant avenues for future research.
+        <h4>Understanding your Measurement</h4>
+    Understanding the method by which you choose to assess your success will be the guideline for your future development. Be sure the measurement you use is what you want to measure. This link is a resource for several different types of <a href=" http://www.cs.cornell.edu/courses/cs578/2003fa/performance_measures.pdf">accuracy tests</a>.
+        <h4>Great sites for sample data sets</h4> 
+    Below are some great sites for some sample data sets
     <a href="http://www.kaggle.com/competitions">Kaggle Competitions</a>
     <a href="https://archive.ics.uci.edu/ml/datasets.html">Kaggle Competitions</a>
   </div>
