--- a/public/views/partials/galaxyclass.html
+++ b/public/views/partials/galaxyclass.html
@@ -1,13 +1,23 @@
-<div class="container galaxyclass" ng-controller='GalaxyClassController'>
-  <div class="content">
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">Galaxy Morphology Use Case <span class="text-muted">It'll blow your mind.</span></h2>
-        <p class="lead">Image of galaxy and information about this example</p>
-      </div>
-      <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="../images/galaxyFlow.png">
-      </div>
-    </div>      
-  </div>
-</div>
+<h2 class="heading">Galaxy Morphology Use Case <span class="text-muted">It'll blow your mind.</span></h2>
+            <table class="table">
+              <tr>
+                <th> Classification </th>
+                <th> Percent likelihood </th>
+                <th> Example </th>
+              </tr>
+              <tr>
+                <td > Smooth </td>
+                <td> 60 % </td>
+                <td> <img src="../../images/Smooth.png" /> </td>
+              </tr>
+              <tr>
+                <td > Features or disk </td>
+                <td> 20 % </td>
+                <td> <img src="../../images/FeaturesOrDisk.png" /> </td>
+              </tr>
+              <tr>
+                <td > Star or artifact </td>
+                <td> 20% </td>
+                <td> <img src="../../images/StarOrArtifcat.png" /> </td>
+              </tr>
+              <tr> </tr>
