added more hard coded styling

--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -26,37 +26,37 @@
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="content galaxyclass" ng-controller='GalaxyClassController'>
-      <div class="row featurette">
+      <div class="row">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive img-rounded" src="../../images/galaxyExample1.jpg">
+          <img class="img-responsive img-rounded" src="../../images/galaxyExample1.jpg">
         </div>
         <div class="col-md-7">
           <div class="row">
-            <div class="panel panel-default" style="background-color : #25323A;">
+            <div class="panel panel-default" style="background-color : #02022A;">
               <!-- Default panel contents -->
-              <div class="panel-heading" style="background-color : #101010;"><h2 class="heading">Galaxy Morphology Use Case <span class="text-muted">It'll blow your mind.</span></h2></div>
+              <div class="panel-heading " style="background-color : #101010; text-shadow: 3px 3px 3px #333333;"><h2 class="text-info text-center" style="color: #FFFFFF">Galaxy Morphology Classification</h2></div>
 
               <!-- Table -->
-              <table class="table" style="color: #7A96A6;">
+              <table class="table text-center" style="color: #FFFFFF;">
                 <tr>
-                  <th> Classification </th>
-                  <th> Percent likelihood </th>
-                  <th> Example </th>
+                  <th class="text-center"><h3> Classification </h3></th>
+                  <th class="text-center"><h3> Percent likelihood </h3></th>
+                  <th class="text-center"><h3> Example </h3></th>
+                </tr>
+                <tr >
+                  <td style="vertical-align: middle;"><h4> Smooth </h4></td>
+                  <td style="vertical-align: middle;"><h4> 60 % </h4></td>
+                  <td style="vertical-align: middle;"> <img src="../../images/Smooth.png" /> </td>
                 </tr>
                 <tr>
-                  <td> Smooth </td>
-                  <td> 60 % </td>
-                  <td> <img src="../../images/Smooth.png" /> </td>
+                  <td style="vertical-align: middle;"><h4> Features or disk </h4></td>
+                  <td style="vertical-align: middle;"><h4> 20 % </h4></td>
+                  <td style="vertical-align: middle;"> <img src="../../images/FeaturesOrDisk.png" /> </td>
                 </tr>
                 <tr>
-                  <td> Features or disk </td>
-                  <td> 20 % </td>
-                  <td> <img src="../../images/FeaturesOrDisk.png" /> </td>
-                </tr>
-                <tr>
-                  <td> Star or artifact </td>
-                  <td> 20% </td>
-                  <td> <img src="../../images/StarOrArtifcat.png" /> </td>
+                  <td style="vertical-align: middle;"><h4> Star or artifact </h4></td>
+                  <td style="vertical-align: middle;"><h4> 20% </h4></td>
+                  <td style="vertical-align: middle;"> <img src="../../images/StarOrArtifcat.png" /> </td>
                 </tr>
                 <tr> </tr>
               </table>
