Fixed the links on Jeanette's Bio

--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -25,11 +25,10 @@
         <img class="img-circle " alt="250x250" src="../../images/team1.jpg" style="width: 250px; height: 250px;">
       <br>
       <ul class="list-inline text-center">
-        <li><a href="https://github.com/sona82"><i class="fa fa-github fa-3x"></i></a></li>
+        <li><a href="https://github.com/jgpettibone"><i class="fa fa-github fa-3x"></i></a></li>
         <li></li>
-        <li><a href="https://github.com/sona82"><i class="fa fa-linkedin fa-3x"></i></a></li>
-        <li></li>
-        <li><a href="https://github.com/sona82"><i class="fa fa-twitter fa-3x"></i></a></li>
+        <li><a href="https://www.linkedin.com/pub/jeanette-pettibone/3/754/713"><i class="fa fa-linkedin fa-3x"></i></a></li>
+
       </ul>
       </div>
       <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
